--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,12 @@ description:         Please see the README on GitHub at <https://github.com/flav
 
 dependencies:
 - base >= 4.7 && < 5
+- peggy
+- text >=0.11 && <2.0
+- optparse-applicative
+- shakespeare
+- monad-supply >= 0.6
+- mtl
 
 library:
   source-dirs: src
