--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-13.0
+resolver: lts-11.2
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -38,6 +38,10 @@ packages:
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
+extra-deps:
+- git: https://github.com/flaviusb/Peggy.git
+  commit: 077ef5b604b8d911bfd30f3276621c16247fa347
+- monad-supply-0.6
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
